--- a/profiles/templates/profiles/my_invites.html
+++ b/profiles/templates/profiles/my_invites.html
@@ -20,7 +20,7 @@ my invites
                     <h3>{{obj.user}}</h3>
                     <p>{{obj.bio}}</p>
                     <br>
-                    <a href=""><button class="ui primary button w-big mb-5">See profile</button></a>
+                    <a href="{{obj.get_absolute_url}}"><button class="ui primary button w-big mb-5">See profile</button></a>
                     <form action="{% url 'profiles:accept-invite' %}" method="POST">
                         {% csrf_token %}
                         <input type="hidden" name="profile_pk" value="{{obj.pk}}">
