--- a/posts/templates/posts/main.html
+++ b/posts/templates/posts/main.html
@@ -21,7 +21,7 @@
                 </div>
                     
                 </div>
-                <img class="ui avatar image" src={{obj.author.avatar.url}}> 
+                <img class="ui avatar image" src={{obj.author.avatar.url}} alt=""> 
                 {{ obj.author.user }} - {{ obj.created|timesince}} ago
             </div>
             <div class="ui fluid image">
