--- a/profiles/templates/profiles/detail.html
+++ b/profiles/templates/profiles/detail.html
@@ -9,7 +9,7 @@ profile detail
     <br>
     <div class="row">
         <div class="four wide column">
-            <img class="ui medium rounded image" src="{{object.avatar.url}}">
+            <img class="ui medium rounded image" src="{{object.avatar.url}}" alt="">
             <h1>{{object.user}}</h1>
             <div class="ui vertical fluid menu">
                 <div class="item">
