--- a/profiles/templates/profiles/my_invites.html
+++ b/profiles/templates/profiles/my_invites.html
@@ -14,7 +14,7 @@ my invites
         <div class="ui grid">
             <div class="row">
                 <div class="three wide column">
-                    <img class="ui small circular image" src="{{obj.avatar.url}}">
+                    <img class="ui small circular image" src="{{obj.avatar.url}}" alt="">
                 </div>
                 <div class="thirteen wide column">
                     <h3>{{obj.user}}</h3>
