--- a/profiles/templates/profiles/myprofile.html
+++ b/profiles/templates/profiles/myprofile.html
@@ -39,7 +39,7 @@ my Profiles
   <div class="ui grid">
       <div class="row">
         <div class="six wide column">
-          <img class="ui medium rounded image" src="{{profile.avatar.url}}">
+          <img class="ui medium rounded image" src="{{profile.avatar.url}}" alt="">
           <div class="row mt-5">
               <button class="ui secondary button" id="modal-btn">Update your profile</button>
           </div>
