--- a/profiles/templates/profiles/profiles_list.html
+++ b/profiles/templates/profiles/profiles_list.html
@@ -15,7 +15,7 @@ all profiles
         <div class="ui grid">
             <div class="row">
                 <div class="three wide column">
-                    <img class="ui small circular image" src="{{obj.avatar.url}}">
+                    <img class="ui small circular image" src="{{obj.avatar.url}}" alt="">
                 </div>
                 <div class="thirteen wide column">
                     <h3>{{obj.user}}</h3>
